--- a/src/Components/Box/box.css
+++ b/src/Components/Box/box.css
@@ -37,3 +37,28 @@
     justify-content: center;
     align-items: center;
 }
+.left-image{
+    position: relative;
+}
+.shoeImg-abs{
+    position: absolute;
+    width: 40vw;
+    opacity: 1;
+    top:-20vh;
+    left: -60px;
+
+}
+.arrowImg-abs{
+    position: absolute;
+    width: 40vw;
+    top:-30vh;
+    z-index: 10;
+    opacity: 0.6;
+}
+.shadow-abs{
+    position: absolute;
+    width: 30vw;
+    height: 20px;
+    bottom: -10vh;
+
+}
