--- a/src/Components/Text/text.css
+++ b/src/Components/Text/text.css
@@ -7,6 +7,7 @@
     color: white;
     font-family: 'Signika', sans-serif;
     font-weight: bold;
+    text-align: center;
 }
 .box-title{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
