[UIUX] uiux improved with hover effects and width management

--- a/src/Components/Box/box.css
+++ b/src/Components/Box/box.css
@@ -40,6 +40,14 @@
     position: absolute;
 }
 
+.sm-right-align{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
+    text-align: end;
+    width: 100%;
+}
 
 @media (min-width: 1280px) {
     .shoeImg-abs{
