--- a/src/Components/Text/text.css
+++ b/src/Components/Text/text.css
@@ -12,6 +12,7 @@
 .box-title{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+    color: black;
 }
 .description{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
