--- a/src/Components/Box/box.css
+++ b/src/Components/Box/box.css
@@ -125,6 +125,9 @@
     .hide-on-big{
         display: none;
     }
+    .sub-main{
+        width: 90%;
+    }
 }
 @media (max-width: 767px){
     .shoeImg-abs{
