--- a/Components/Box/box.css
+++ b/Components/Box/box.css
@@ -1,6 +1,6 @@
 .main-box{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
