[UIUX] text size and box size fixes

--- a/Components/Text/text.css
+++ b/Components/Text/text.css
@@ -2,109 +2,38 @@
     color: white;
     font-family: 'Signika', sans-serif;
     font-weight: bold;
+    font-size: 6vh;
 }
 .sub-heading{
     color: white;
     font-family: 'Signika', sans-serif;
     font-weight: bold;
     text-align: center;
+    font-size: 4vh;
+
 }
 .box-title{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     color: black;
+    font-size: 3vh;
+
 }
 .description{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2vh;
+
 }
 .label{
     font-family: 'Signika', sans-serif;
     color: white;
+    font-size: 2vh;
+
 }
 .error{
     color: #FA1C1C;
-}
-
-@media (min-width: 1280px) {
-    .main-heading{
-        font-size: 100px;
-    }
-    .sub-heading{
-        font-size: 30px;
-    }
-    .box-title{
-        font-size: 20px;
-    }
-    .description{
-        font-size: 17px;
-    }
-    .label{
-        font-size: 17px;
-    }
-}
-
-
-
-@media (min-width: 1024px) and (max-width: 1279px) {
-    .main-heading{
-        font-size: 60px;
-    }
-    .sub-heading{
-        font-size: 20px;
-    }
-    .box-title{
-        font-size: 18px;
-    }
-    .description{
-        font-size: 15px;
-    }
-    .label{
-        font-size: 15px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 1023px) {
-    .main-heading{
-        font-size: 50px;
-    }
-    .sub-heading{
-        font-size: 19px;
-    }
-    .box-title{
-        font-size: 17px;
-    }
-    .description{
-        font-size: 13px;
-    }
-    .label{
-        font-size: 13px;
-    }
-}
-
-@media (min-width: 640px) and (max-width: 767px) {
+    font-size: 2vh;
 
 }
-@media (min-width: 768px){
-   
-}
-@media (max-width: 767px){
-    .main-heading{
-        font-size: 10vw;
-    }
-    .sub-heading{
-        font-size: 6vw;
-    }
-    .box-title{
-        font-size: 4vw;
-    }
-    .description{
-        font-size: 3.2vw;
-    }
-    .label{
-        font-size: 3.2vw;
-    }
-}
-@media (max-width: 639px) {
 
-}
 
